# vigpt_chatbot

./: .gitignore  README.md  pyproject.toml  rag_langchain.ipynb  requirements.txt  setup.py
adding_conventional_chain/: conventional_chain.py
chatbot/: main.py  rag_func.py
data_loading/: load_split.py
evaluation/: ragas_eval.ipynb
rag/: pipeline.ipynb
retrieval_techniques/: contexual_compression.py  mmr.py  rag_langchain.ipynb  self_query.py  similarity_search.py
study/: gitcmd.txt  keyword_arguments.py  len.py
utils/: embeddings.py
