[project]
name = "package_stevehoang"
version = "0.0.1"
authors = [
  { name="Steve Hoang", email="steve.pvhoang@gmail.com" },
]
description = "A package is used for building a vigpt chatbot"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/phamvanhoang9/vigpt_chatbot.git"
Documentation = "https://arxiv.org/pdf/2005.11401v4.pdf"
